调整 网站文件 结构

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         // '/_coverpage.md': '/coverpage.md',
         // '/_sidebar.md': '/sidebar.md',
       },
-      basePath: '/docs/',
-      homepage: '../README.md',
+      basePath: '/',
+      homepage: 'README.md',
       auto2top: true,
       coverpage: true,
       executeScript: true,
