--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>feng3d</title>
-	<meta name="renderer" content="webkit">
-  <link rel="icon" href="_media/favicon.ico">
+  <meta name="renderer" content="webkit">
+  <link rel="icon" href="favicon.ico">
   <meta name="google-site-verification" content="6t0LoIeFksrjF4c9sqUEsVXiQNxLp2hgoqo0KryT-sE" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="keywords" content="doc,docs,documentation,gitbook,creator,generator,github,jekyll,github-pages">
@@ -30,8 +30,8 @@
         // '/_coverpage.md': '/coverpage.md',
         // '/_sidebar.md': '/sidebar.md',
       },
-      basePath: '/',
-      homepage: 'README.md',
+      basePath: '/docs',
+      homepage: '../README.md',
       auto2top: true,
       coverpage: true,
       executeScript: true,
