--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         // '/_coverpage.md': '/coverpage.md',
         // '/_sidebar.md': '/sidebar.md',
       },
-      basePath: '/docs',
+      basePath: 'docs',
       homepage: '../README.md',
       auto2top: true,
       coverpage: true,
