--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         // '/_sidebar.md': '/sidebar.md',
       },
       basePath: 'docs',
-      homepage: '../README.md',
+      // homepage: '../README.md',
+      homepage: '../feng3d/README.md',
       auto2top: true,
       coverpage: true,
       executeScript: true,
